# micrometeorology

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/solrad_correction/: artifact_checkpoint.py  loading.py  preprocessing.py  sequence_dataloader.py
configs/allsky/: default.yaml
configs/allsky/data/: local_prepare.yaml
configs/allsky/experiments/: _base.yaml  v0_climatology.yaml  v1_sensor_only.yaml  v2_image_only.yaml  v3_concat.yaml  v4_film.yaml  v5_multitask.yaml  v6_film_finetune.yaml  v7_cross_attention.yaml
configs/allsky/models/: concat.yaml  cross_attention.yaml  film.yaml  image_only.yaml  sensor_only.yaml
docs/: allsky-architecture.md  allsky.md  micrometeorology.md  solrad_correction.md
legacy/: processa_wrf_04.1_figuras-V1.0.3.py  processa_wrf_07.1_geojson-V1.0.0.py  utility.py
legacy/Formatting/: process-bruto2horario.ipynb
legacy/Formatting/Statistic/: statistics-jounee-younes.py
legacy/Graphs-site-15min/: main.py
legacy/firmware/: LBMUFBA_fmt_lenta.c  LBMUFBA_fmt_rain.c
legacy/scripts-wrf/: namelist.processa  processa_wrf_00_system-V3.1.0.scpt  processa_wrf_01_busca-V2.0.0.scpt  processa_wrf_02_wps-V2.0.0.scpt  processa_wrf_03_wrf-V2.0.0.scpt  processa_wrf_04_python-V2.0.0.scpt  processa_wrf_05_mmif-V2.0.0.scpt  processa_wrf_06_readwrfnc-V2.1.0.scpt  processa_wrf_08_ftp-V2.0.0.scpt  processa_wrf_09_deletafiles-V1.1.2.scpt
legacy/wrf/: netcdfUtils.py  run-metrics.py
notebooks/: README.md  allsky_colab.ipynb  allsky_multimodal_colab.ipynb
notebooks/exploratory/: 01_sensor_data_merging.ipynb
notebooks/tcc/: 02_colab_training.ipynb
scripts/: README.md  train_colab.py
scripts/wrf/: run_all.py
src/allsky/: __init__.py  atomic.py  bundle.py  clearsky.py  cli.py  config.py  dataset.py  erbs.py  models.py  preprocessing.py  provenance.py  sensors.py  solar.py  video.py
src/allsky/cli/: __init__.py  embeddings.py  evaluate.py  frames.py  legacy.py  prepare.py  train.py
src/allsky/data/: __init__.py  alignment.py  contracts.py  datasets.py  loading.py  manifest.py  splits.py  validation.py
src/allsky/embeddings/: __init__.py  backbone.py  extract.py  storage.py
src/allsky/evaluation/: __init__.py  evaluator.py  metrics.py  reports.py
src/allsky/features/: __init__.py  engineering.py  normalization.py  policy.py
src/allsky/modeling/: __init__.py  baselines.py  contracts.py  fusion.py  heads.py  multimodal.py  registry.py  sensor_encoder.py  visual_encoder.py
src/allsky/training/: __init__.py  checkpointing.py  device.py  engine.py  legacy.py  losses.py
src/micrometeorology/: __init__.py
src/micrometeorology/cli/: __init__.py  compare_wrf_observations.py  compute_metrics.py  export_wrf_geojson.py  generate_station_graphs.py  ingest_sensor_data.py  plot_station_graphs.py  render_wrf_maps.py  run_wrf_pipeline.py
src/micrometeorology/common/: config.py  paths.py  types.py
src/micrometeorology/sensors/: calibration.py  export.py  ingestion.py  plotting.py  wind.py
src/micrometeorology/stats/: climatology.py  comparison.py  metrics.py  radiation.py
src/micrometeorology/wrf/: animation.py  batch.py  execution.py  geojson.py  interpolation.py  jobs.py  plotting.py  reader.py  safety.py  series.py  variables.py
src/solrad_correction/: cli.py  cli_colab.py
src/solrad_correction/config/: experiment.py
src/solrad_correction/data/: loaders.py  preprocessing.py  splits.py
src/solrad_correction/datasets/: sequence.py  serialization.py  tabular.py
src/solrad_correction/evaluation/: metrics.py  policy.py  reports.py
src/solrad_correction/experiments/: overrides.py  pipeline.py  results.py  runner.py  writer.py
src/solrad_correction/features/: sequence.py  temporal.py
src/solrad_correction/models/: base.py  lstm.py  registry.py  sklearn_base.py  svm.py  torch_base.py  transformer.py
src/solrad_correction/training/: checkpoints.py  dataloaders.py  factories.py  loops.py  progress.py  state.py  trainer.py
src/solrad_correction/utils/: io.py  memory.py  metadata.py  serialization.py
tests/: conftest.py
tests/allsky/: _synthetic.py  test_alignment.py  test_bundle.py  test_checkpointing.py  test_clearsky.py  test_cli.py  test_cli_embeddings.py  test_cli_evaluate.py  test_cli_package.py  test_cli_prepare.py  test_cli_train_dispatch.py  test_config_experiment.py  test_configs_repo.py  test_data_contracts.py  test_data_datasets.py  test_data_splits.py  test_dataset.py  test_e2e_experiment.py  test_embeddings_extract.py  test_embeddings_storage.py  test_engine.py  test_engine_findings.py  test_eval_metrics.py  test_evaluator.py  test_features.py  test_losses.py  test_manifest.py  test_modeling.py  test_modeling_contract.py  test_models.py  test_preprocessing.py  test_sensors.py  test_solar_erbs.py  test_validation.py  test_video.py
tests/micromet/: _reference.py  test_calibration.py  test_cli_export.py  test_cli_smoke.py  test_geojson.py  test_ingestion.py  test_plot_station_graphs.py  test_stats.py  test_wrf_batch.py  test_wrf_execution.py  test_wrf_interpolation.py  test_wrf_jobs.py  test_wrf_reader.py  test_wrf_safety.py  test_wrf_streaming.py  test_wrf_variables.py
tests/tcc/: test_benchmarks_smoke.py  test_cli_contracts.py  test_features.py  test_io_contracts.py  test_pipeline_contracts.py  test_scientific_contracts.py  test_serialization_integrity.py  test_training_contracts.py
